--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "populate-db": "node src/scripts/runPopulateFirestore.js"
   },
   "keywords": [
     "healthcare",
@@ -25,13 +26,14 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "openai": "^4.97.0",
+    "openai": "^4.103.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
